--- a/state_machine/config/locales/ru.yml
+++ b/state_machine/config/locales/ru.yml
@@ -3,7 +3,10 @@
 #     formats:
 #       short: "%Y-%m-%d %H:%M:%S"
 ru:
-  begin: "Начальное состояние вещества %{state}"
+  begin: "Начальное состояние вещества '%{state}'"
+  end: "Cостояние вещества после воздействия '%{state}'"
+  action: "Совершаемое воздействие -> '%{action}'"
+  error: "Применить данное воздействие на '%{state}' состояние невозможно"
   condense: "конденсация"
   melt: "плавление"
   freeze_: "кристаллизация"
