minor code change

--- a/state_machine/config/locales/ru.yml
+++ b/state_machine/config/locales/ru.yml
@@ -6,7 +6,7 @@ ru:
   begin: "Начальное состояние вещества '%{state}'"
   end: "Cостояние вещества после воздействия '%{state}'"
   action: "Совершаемое воздействие -> '%{action}'"
-  error: "Применить данное воздействие на '%{state}' состояние невозможно"
+  error: "Применить данное воздействие на '%{state}' состояние невозможно!"
   condense: "конденсация"
   melt: "плавление"
   freeze_: "кристаллизация"
